--- a/application/src/index.html
+++ b/application/src/index.html
@@ -8,31 +8,33 @@
         <!-- Loads CSS -->
         <link rel="stylesheet" href="/css/bootstrap.min.css"  type="text/css"/>
         <link rel="stylesheet" href="/css/style.css" type="text/css" />
+        <link rel="shortcut icon" type="image/x-icon" href="/img/branico.ico"/>
+        <link rel="stylesheet" href="/css/open-iconic-bootstrap.min.css" type="text/css" />
         <title>Intranet</title>
     </head>
     <body>
+        <div class="backgroundImage"></div>
         <!--Load html with bootstrap-->
-        <div class="container-fluid">
-            <div class="row"></div>
-            <div class="row">
+        <div class="container">
+            <div class="row bajando">
               <div class="col-sm"></div>
               <div class="col-sm-6">
                 <!-- inicio del login-->
-                <div class="card">
+                <div class="card alert alert-dark">
                   <div class="card-body">
                     <h5 class="card-title">Intranet</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Login</h6>
-                    <form class="alert alert-dark">
+                    <form>
                       <div class="form-group">
-                        <label for="user">Usuario</label>
+                        <label for="user"><span class="oi oi-person" id="basico"></span>&nbsp;Usuario</label>
                         <input type="text" class="form-control" id="user" name="user" aria-describedby="emailHelp" placeholder="Correo" />
                         <small id="emailHelp" class="form-text text-muted">Utilice el correo de la empresa</small>
                       </div>
                       <div class="form-group">
-                        <label for="pass">Contraseña</label>
+                        <label for="pass"><span class="oi oi-lock-locked"></span>&nbsp;Contraseña</label>
                         <input type="password" class="form-control" id="pass" placeholder="Contraseña" />
                       </div>
-                      <div class="form-group">
+                      <div class="form-group centrando">
                         <button type="submit" class="btn btn-primary">Entrar</button>
                         <button type="button" class="btn btn-danger">Cancelar</button>
                       </div>
