--- a/application/src/index.html
+++ b/application/src/index.html
@@ -38,6 +38,12 @@
                         <button type="submit" class="btn btn-primary">Entrar</button>
                         <button type="button" class="btn btn-danger">Cancelar</button>
                       </div>
+                      <div class="form-group centrado">
+                        <p>
+                            Crear cuenta&nbsp;<a href="#" class="badge badge-success">¡Aquí!</a>
+                            ¿Olvido su contraseña?&nbsp;<a href="#" class="badge badge-warning">¡Click aquí!</a>
+                        </p>
+                      </div>
                     </form>
                   </div>
                 </div>
@@ -51,5 +57,6 @@
       <script src="/js/jquery-3.2.1.min.js"></script>
       <script src="/js/popper.min.js"></script>
       <script src="/js/bootstrap.min.js"></script>
+      <script src="/js/angular.min.js"></script>
     </body>
 </html>
